src/objects/Optics_Territory_Assignment_Codes__c.object
<CustomObject>
    <description>Objects for Optics to load Territory Assignment codes based on Zip codes to be populated on Accounts.</description>
    <fields>
        <fullName>OBDM_Regional_VP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OBDM Regional VP</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ophthalmic_Business_Consultant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ophthalmic Business Consultant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ophthalmic_Business_Regional_VP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ophthalmic Business Regional VP</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Business_Development_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Optics Business Development Manager</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Contact_Lens_Consultant__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Optics Contact Lens Consultant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optics_Contact_Lens_Regional_VP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Optics Contact Lens Regional VP</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Optics Territory Assignment Codes</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Optics Territory Assignment Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optics Territory Assignment Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VSPR34_check_ZIPcode_length</fullName>
        <active>true</active>
        <errorConditionFormula>NOT REGEX( Zip_Code__c ,&quot;[0-9]{5}&quot;)</errorConditionFormula>
        <errorDisplayField>Zip_Code__c</errorDisplayField>
        <errorMessage>Please enter valid 5 digit zip code.</errorMessage>
    </validationRules>
</CustomObject>